--- a/requirements.txt
+++ b/requirements.txt
@@ -80,7 +80,7 @@ mypy-extensions==1.0.0
 nbformat==5.9.2
 nest-asyncio==1.5.8
 numba==0.58.1
-numpy==1.25.2
+numpy>=1.26.0,<2.0
 openai==0.28.1
 openpyxl==3.1.2
 orjson==3.9.10
