--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ pydantic_core==2.14.5
 pypdf==3.17.3
 SpeechRecognition==3.10.1
 gTTS==2.5.0
+numpy==1.21.5
 pandas==1.3.3
 numpy==1.21.0
 pycaret==3.2.0
