--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ reportlab==4.0.8
 pydantic==2.5.2
 pydantic_core==2.14.5
 pypdf==3.17.3
+PyAudio==0.2.14
 SpeechRecognition==3.10.1
 gTTS==2.5.0
 streamlit==1.29.0
